# ESP32-WiFi-Credentials-Manager

./: .gitignore
captivePortal/: CMakeLists.txt  README.md
captivePortal/components/webInterface/: CMakeLists.txt  webInterface.c
captivePortal/components/webInterface/include/: webInterface.h
captivePortal/main/: CMakeLists.txt  captivePortal.c
